- Header menu styling inconsistencies on comp

--- a/src/styles/components/_header-menu.scss
+++ b/src/styles/components/_header-menu.scss
@@ -6,6 +6,8 @@ $menu-item-color: $color-white;
 $menu-item-padding: 2.5rem;
 
 .sam-header-menu {
+  width: auto;
+
   ul {
     margin-top: 0rem;
     margin-bottom: 1rem;
@@ -15,8 +17,6 @@ $menu-item-padding: 2.5rem;
   .menu-item {
     height: $menu-item-height;
     margin: 0rem;
-    padding-left: $menu-item-padding;
-    padding-right: $menu-item-padding;
     background-color: $menu-background;
     font-size: 1rem;
     text-align: left;
@@ -26,9 +26,14 @@ $menu-item-padding: 2.5rem;
 
     a {
       display: inline-block;
+      padding-left: $menu-item-padding;
+      padding-right: $menu-item-padding;
       font-size: $menu-item-font;
+      color: $menu-item-color;
       text-decoration: none;
+      white-space: nowrap;
       line-height: $menu-item-height;
+
 
       &:focus,
       &:active,
