Add in writing content for help home page

--- a/src/app/Help/sections/about-sam/about-sam.template.html
+++ b/src/app/Help/sections/about-sam/about-sam.template.html
@@ -4,19 +4,13 @@
   <div class="usa-grid-full">
     <h3 id="whoWeAre" class="p_L-3x">Who we are</h3>
     <p class="p_L-8x">
-      Ad verterem scripserit pro, falli apeirian ad est, vis
-      ne corpora vivendum. Cu nihil exerci principes vis, et eos doctus malorum
-      deterruisset. Id labores vivendum vim. Vitae aliquip mnesarchum mel ut, sit etiam
-      fuisset convenire an.
+      The new SAM.gov is a unified system that has modernized and integrated from 10 systems to one. Migrating the 10 legacy systems into one allows the new SAM.gov
+      to be the central website for government award management. This new website will allow you to simply register and access data for all business opportunities with the government.
     </p>
-  </div>
 
-  <div class="usa-grid-full">
-    <h3 id="alerts" class="p_L-3x">System Alerts</h3>
     <p class="p_L-8x">
-      Albucius lobortis ius et, sea debet inimicus ne,
-      nec accusam iudicabit cu. Ad verterem scripserit pro, falli apeirian ad est, vis
-      ne corpora vivendum.
+      The new SAM.gov helps with the identification of future bidding opportunities for re-occurring service contracts; determining which agencies have bought a type
+      of product or service; and determining what contracts your competitors hold. In addition, you can search for your entities needs based on several categories, including entity, location, products and services.
     </p>
   </div>
 </section>
