--- a/src/app/Help/sections/overview/overview.template.html
+++ b/src/app/Help/sections/overview/overview.template.html
@@ -1,20 +1,10 @@
 <section>
   <h2 class="m_T-2x">Welcome to the SAM.gov Help Center!</h2>
   <p class="p_L-8x">
-    Lorem ipsum dolor sit amet, vix dolor pericula conceptam at, qui delenit suavitate voluptatibus in,
-    graece diceret lobortis vim ei.
+    Welcome to the new SAM.gov help section page. Many answers to your questions and concerns can be found here online in either, FAQs, self-help, or our chat feature.
   </p>
 
   <div class="usa-grid-full">
-
-    <h3 class="p_L-3x">Online Help Navigation</h3>
-    <div class="usa-grid-full">
-      <p class="p_L-8x">
-        Omnes inermis ius at, ad assum constituto referrentur eam. Regione
-        deserunt no vis, in his sale aeque. Saepe virtute impedit no nec, elitr decore antiopam cu usu, sit
-        mandamus splendide comprehensam te.
-      </p>
-    </div>
 
     <h3 class="p_L-3x">Federal Service Desk</h3>
     <div class="usa-grid-full">
@@ -22,9 +12,7 @@
           <a><img src="src/assets/img/fsd_logo.jpg" alt="Federal Service Desk Logo"></a>
       </div>
       <div class="usa-width-three-fourths">
-        <p>Ei ius novum aeque aeterno. Saepe dicam assueverit ius te. Et
-          utroque mediocrem corrumpit usu. Et vel dolore legimus rationibus,
-          mei debet putant similique ex, ea vel enim aliquam neglegentur
+        <p>Welcome to The Federal Service Desk (FSD.gov), an interactive help desk that assists you with obtaining the information and support you need.
         </p>
       </div>
     </div>
@@ -34,10 +22,8 @@
         <a><img src="src/assets/img/interact.png" alt="Interact Logo"></a>
       </div>
       <div class="usa-width-three-fourths">
-        <p>Ex homero consequuntur signiferumque ius. Velit saepe equidem has
-          te, vim vulputate appellantur at. Ei ullum explicari eum, veritus
-          mandamus at vel. Fugit consequat aliquando sed cu. Sed volumus copiosae
-          definitiones ei, has erant concludaturque ne.
+        <p>Welcome to GSA Interact, an open, collaborative community for connecting, communicating, learning and engaging across GSA topics. Our goal is to help increase
+          government’s effectiveness through better communication and collaboration.
         </p>
       </div>
     </div>
