Adding sidenav component

--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -1,4 +1,6 @@
 <div class="usa-grid opportunity-page">
+  
+  <samSidenav model="sidenavModel"></samSidenav>
 
   <!--Sidebar-->
   <aside class="usa-width-one-fourth">
