--- a/src/app/authentication/shared/password/password.component.html
+++ b/src/app/authentication/shared/password/password.component.html
@@ -4,7 +4,7 @@
       <div class="usa-form-large form-group" [ngClass]="$formState()">
         <fieldset>
           <div *ngIf="currentPassword">
-          <labelWrapper label="Current Password" required="true" [errorMessage]="$currentPasswordErrors()">
+          <labelWrapper label="Current Password" [errorMessage]="$currentPasswordErrors()" [required]="true">
               <input type="{{ states.toggle ? 'text' : 'password' }}"
                      name="currentPassword"
                      readonly="readonly"
@@ -13,7 +13,7 @@
             </labelWrapper>
           </div>
           <div>
-            <labelWrapper label="Create Password" required="true">
+            <labelWrapper label="Create Password" [errorMessage]="(states.submitted || password.touched) ? states.error.password : ''" [required]="true">
               <input type="{{ states.toggle ? 'text' : 'password' }}"
                      name="password"
                      readonly="readonly"
@@ -22,7 +22,7 @@
             </labelWrapper>
           </div>
           <div [ngClass]="getFormControlStates('confirmPassword')">
-            <labelWrapper label="Confirm Password" required="true" [errorMessage]="confirmPassword.touched ? states.error : ''">
+            <labelWrapper label="Confirm Password" required="true" [errorMessage]="(states.submitted || confirmPassword.touched) ? states.error.confirmPassword : ''">
               <input type="{{ states.toggle ? 'text' : 'password' }}"
                      name="confirmPassword"
                      readonly="readonly"
@@ -40,8 +40,8 @@
           <ul>
             <li class="header">Passwords must:</li>
             <li>
-              <div class="icon"><span class="fa" [ngClass]="$formState(states.validations.minlength)"></span></div>
-              <span [innerHTML]="config.messages.minlength"></span>
+              <div class="icon"><span class="fa" [ngClass]="$formState(states.validations.minLength)"></span></div>
+              <span [innerHTML]="config.messages.minLength"></span>
             </li>
             <li>
               <div class="icon"><span class="fa" [ngClass]="$formState(states.validations.uppercase)"></span></div>
