--- a/src/styles/components/authentication/shared/_password.scss
+++ b/src/styles/components/authentication/shared/_password.scss
@@ -100,6 +100,12 @@
       visibility: hidden;
     }
   }
+
+  .ng-submitted {
+    .icon {
+      visibility: visible !important;
+    }
+  }
 }
 
 .usa-grid {
