Toggle pages in prodlike

--- a/src/app/Help/sections/reference-library/reference-library.template.html
+++ b/src/app/Help/sections/reference-library/reference-library.template.html
@@ -1,6 +1,6 @@
 <section class="reference-library-page">
   <h2 class="m_T-2x">Reference Library</h2>
-  <p class="p_L-3x">
+  <p class="p_L-3x" *ngIf="linkToggle()">
     Albucius lobortis ius et, sea debet inimicus ne,
     nec accusam iudicabit cu. Ad verterem scripserit pro, falli apeirian ad est, vis
     ne corpora vivendum.
