--- a/src/app/application-content/home/home.template.html
+++ b/src/app/application-content/home/home.template.html
@@ -96,7 +96,7 @@
 
               <div class="usa-width-one-whole">
                 <div class="usa-width-five-sixths">
-                  <span >{{curTopic.detail}} <a [routerLink]="[curTopic.url]">here</a>.</span>
+                  <span>{{curTopic.detail}} <a [routerLink]="[curTopic.url]">here</a>.</span>
                 </div>
                 <div class="usa-width-one-sixth">
                   <span class="pull-right">
@@ -171,7 +171,9 @@
         </span>
       </div>
       <div class="usa-width-one-whole">
-        <span>{{curTopic.detail}}<a [routerLink]="[curTopic.url]">here</a>.</span>
+        <span *ngIf="linkToggle() || !curTopic.pageInProgress">{{curTopic.detail}}<a [routerLink]="[curTopic.url]">here</a>.</span>
+        <span *ngIf="!linkToggle() && curTopic.pageInProgress">{{curTopic.inProgressDetail}}</span>
+
       </div>
     </div>
   </div>
