fixes to user service

--- a/src/app/users/public/access/access.template.html
+++ b/src/app/users/public/access/access.template.html
@@ -1,1 +1,8 @@
-Access
+<h1>Access</h1>
+<br>
+<samMultiSelectDropdown [options]="filters.organizations.options"></samMultiSelectDropdown>
+<samMultiSelectDropdown [options]="filters.roles.options"></samMultiSelectDropdown>
+<samMultiSelectDropdown [options]="filters.domains.options"></samMultiSelectDropdown>
+<samMultiSelectDropdown [options]="filters.objects.options"></samMultiSelectDropdown>
+<samMultiSelectDropdown [options]="filters.permissions.options"></samMultiSelectDropdown>
+
