- Added labels and ids for ones missing according to issue list

--- a/src/app/authentication/shared/password/password.component.html
+++ b/src/app/authentication/shared/password/password.component.html
@@ -4,7 +4,7 @@
       <div class="usa-form-large form-group" [ngClass]="$formState()">
         <fieldset>
           <div *ngIf="currentPassword">
-          <labelWrapper label="Current Password" required="true" [errorMessage]="$currentPasswordErrors()">
+          <labelWrapper label="Current Password" name="currentPassword" required="true" [errorMessage]="$currentPasswordErrors()">
               <input type="{{ states.toggle ? 'text' : 'password' }}"
                      name="currentPassword"
                      readonly="readonly"
@@ -13,7 +13,7 @@
             </labelWrapper>
           </div>
           <div>
-            <labelWrapper label="Create Password" required="true">
+            <labelWrapper label="Create Password" name="password" required="true">
               <input type="{{ states.toggle ? 'text' : 'password' }}"
                      name="password"
                      readonly="readonly"
@@ -22,7 +22,7 @@
             </labelWrapper>
           </div>
           <div [ngClass]="getFormControlStates('confirmPassword')">
-            <labelWrapper label="Confirm Password" required="true" [errorMessage]="confirmPassword.touched ? states.error : ''">
+            <labelWrapper label="Confirm Password" name="confirmPassword" required="true" [errorMessage]="confirmPassword.touched ? states.error : ''">
               <input type="{{ states.toggle ? 'text' : 'password' }}"
                      name="confirmPassword"
                      readonly="readonly"
@@ -31,8 +31,7 @@
             </labelWrapper>
           </div>
           <p class="usa-form-note">
-            <input type="checkbox"
-                   (change)="states.toggle = !states.toggle">
+            <input type="checkbox" id="usa-password-toggle" (change)="states.toggle = !states.toggle">
             <label for="usa-password-toggle">Toggle password</label>
           </p>
         </fieldset>
