--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -18,15 +18,15 @@
           <div class="usa-input-error-message" *ngIf="isErrors() && states.submitted">{{ errors.global[0] }}</div>
 
           <div formGroupName="stage1" [ngClass]="{ 'usa-input-error': errors.username.length && states.submitted }">
-            <label for="username">Email</label>
+            <label for="signin-username">Email</label>
             <span class="usa-input-error-message" *ngIf="errors.username.length && states.submitted" role="alert">{{ errors.username[0] }}</span>
-            <input type="text" id="username" autocomplete="off" formControlName="username" readonly="readonly" onfocus="this.removeAttribute('readonly');"/>
+            <input type="text" id="signin-username" autocomplete="off" formControlName="username" readonly="readonly" onfocus="this.removeAttribute('readonly');"/>
           </div>
 
           <div formGroupName="stage1" [ngClass]="{ 'usa-input-error': errors.password.length && states.submitted }">
-            <label for="password">Password</label>
+            <label for="signin-password">Password</label>
             <span class="usa-input-error-message" *ngIf="errors.password.length && states.submitted" role="alert">{{ errors.password[0] }}</span>
-            <input type="{{ states.password.type }}" id="password" formControlName="password" readonly="readonly"  onfocus="this.removeAttribute('readonly');" />
+            <input type="{{ states.password.type }}" id="signin-password" formControlName="password" readonly="readonly"  onfocus="this.removeAttribute('readonly');" />
           </div>
 
           <p class="usa-form-note">
@@ -59,11 +59,11 @@
           <div class="usa-input-error-message" *ngIf="isErrors() && states.submitted">{{ errors.global[0] }}</div>
 
           <div formGroupName="stage2" [ngClass]="{ 'usa-input-error': states.submitted && isStage(2) && form.controls.stage2.invalid }">
-            <label>Enter your one-time access code</label>
+            <label for="signin-otp">Enter your one-time access code</label>
             <span class="usa-input-error-message" *ngIf="states.submitted && isStage(2) && form.controls.stage2.invalid" role="alert">
               Enter your one-time access code
             </span>
-            <input type="password" formControlName="otp" />
+            <input type="password" id="signin-otp" formControlName="otp" />
           </div>
 
           <div>
