--- a/src/app/authentication/shared/kba/kba.component.html
+++ b/src/app/authentication/shared/kba/kba.component.html
@@ -1,6 +1,6 @@
 <div class="usa-kba">
   <div class="question">
-    <samSelect name="$question"
+    <samSelect [name]="'sam-kba-question-'+states.uid"
                [(model)]="$question"
                [options]="$questions"
                [errorMessage]="states.errors.question"
@@ -10,8 +10,8 @@
   </div>
   <div class="answer">
   <labelWrapper [errorMessage]="(answer.invalid ? states.errors.answer : '')" required="true">
-      <input type="{{ states.type }}"
-             name="answer"
+      <input [type]="states.type"
+             [name]="'sam-kba-answer-'+states.uid"
              [formControl]="answer"
              (blur)="secureAnswer($event)"
              (focus)="selectAnswer($event)"
