Removing tabs and updating sidenav

--- a/src/styles/pages/_opportunity.scss
+++ b/src/styles/pages/_opportunity.scss
@@ -244,6 +244,10 @@
     font-weight: 700;
     color: #5b616b;
   }
-
-
+  
+  /* MISC */
+  /*============================*/
+  samsidenav{
+    display: block;
+  }
 }
