--- a/src/app/app-components/history/history.template.html
+++ b/src/app/app-components/history/history.template.html
@@ -1,1 +1,10 @@
-<h2>History</h2>
+<ul>
+  <li *ngFor="let item of data" [class.current]="item.id == currentId">
+    <span>  
+      <strong>{{item.date}}</strong>
+      <a href="{{ item.url }}">{{ item.title }}</a>
+      <em *ngIf="item.description">{{ item.description }}</em>
+      <i *ngIf="item.isTagged" class="fa fa-certificate" aria-hidden="true"></i>
+    </span>
+  </li>
+</ul>
