--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -36,6 +36,7 @@
 @import 'components/tabs';
 @import 'components/modal';
 @import 'components/alphabet-selector';
+@import 'components/history';
 
 @import 'pages/entity-object-view';
 @import 'pages/exclusion';
