--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -14,7 +14,7 @@
       </ng-container>
       
       <!--Side Navigation-->
-      <samSidenav class="m_T-3x" *ngIf="sidenavModel" (data)="selectedItem($event)" [(model)]="sidenavModel" (path)="sidenavPathEvtHandler($event)"></samSidenav>
+      <samSidenav class="m_T-3x" *ngIf="sidenavModel" (data)="selectedItem($event)" [model]="sidenavModel" (path)="sidenavPathEvtHandler($event)"></samSidenav>
       
     </div>
   </aside>
