--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -128,3 +128,14 @@ h2{
     width: 100%;
   }
 }
+
+.search-template{
+  .showing-results-meta{
+    margin-top:3rem!important;  
+  }
+  samselect{
+    label{
+      margin-top:0;
+    }
+  }
+}
