--- a/src/app/app-components/search-template/search-template.template.html
+++ b/src/app/app-components/search-template/search-template.template.html
@@ -1,11 +1,28 @@
-<div class="usa-grid">
-	<aside *ngIf="showCustomSidebar" class="usa-width-one-fourth">
+<div class="usa-grid search-template">
+	<aside class="usa-width-one-fourth">
 		<ng-content select="[search-sidebar]"></ng-content>
     &nbsp;
 	</aside>
-	<div [attr.class]="contentClass">
+	<div class="usa-width-three-fourths" >
 		<ng-content select="[search-title]"></ng-content>
+		<ng-content select="[search-featured-result]"></ng-content>
+		<div class="usa-grid-full">
+			<div class="usa-width-three-fourths">
+				<p class="showing-results-meta usa-color-text usa-color-text-gray">
+					Page {{currentPage}} of {{totalElements}} results
+				</p>
+			</div>
+			<div class="usa-width-one-fourth">
+				<samSelect [(model)]="sortModel" [name]="sortConfig.name"
+				[options]="sortConfig.options"
+				[label]="sortConfig.label"></samSelect>
+			</div>
+		</div>
 		<ng-content select="[search-content]"></ng-content>
-    <ng-content select="[search-pagination-area]"></ng-content>
+		<div>
+			<div><!-- *ngIf="data.results">-->
+	      <samPagination (pageChange)="pageChangeHandler($event)" [currentPage]="currentPage" [totalPages]="totalPages"></samPagination>
+		  </div>
+		</div>
 	</div>
 </div>
