--- a/src/app/alerts/alerts.template.html
+++ b/src/app/alerts/alerts.template.html
@@ -1,16 +1,8 @@
 <div class="usa-grid alerts-page">
   <!-- the first child cannot have a margin or the overlay breaks -->
   <div style="height: 1px"></div>
-  <div *ngIf="showClassSelector()" class="pull-right">
-    <label>Select Role:</label>
-    <select class='pull-right' [ngModel]="userRole()" (change)="onRoleChange($event.target.value)">
-      <option value="admin">Admin</option>
-      <option value="other">Other</option>
-    </select>
-  </div>
-  <h1 class="alert-page-title">System Alerts
 
-  </h1>
+  <h1 class="alert-page-title">System Alerts</h1>
   <div class="alerts-toolbar">
     <div class="toolbar-item">
       <samMultiSelectDropdown [disabled]='alertBeingEdited' [(model)]="filters.statuses" [label]="statuses.label" [options]="isAdmin() ? statusOptionsAdmin : statusOptions" [name]="'statuses'" (modelChange)="onParamChanged()"></samMultiSelectDropdown>
