--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -21,6 +21,7 @@
 @import 'components/authentication';
 @import 'components/footer';
 @import 'components/button';
+@import 'components/collapsible';
 @import 'components/pagination';
 @import 'components/header';
 @import 'components/header-links';
