--- a/src/app/users/public/access/access.template.html
+++ b/src/app/users/public/access/access.template.html
@@ -1,5 +1,4 @@
 <h1>Access</h1>
-<br>
 <samMultiSelectDropdown (modelChange)="filterChanged()" [options]="filters.organizations.options" [label]="filters.organizations.label" [name]="filters.organizations.label" [(model)]="filters.organizations.value"></samMultiSelectDropdown>
 <samMultiSelectDropdown (modelChange)="filterChanged()" [options]="filters.roles.options" [label]="filters.roles.label" [name]="filters.roles.label" [(model)]="filters.roles.value"></samMultiSelectDropdown>
 <samMultiSelectDropdown (modelChange)="filterChanged()" [options]="filters.domains.options" [label]="filters.domains.label" [name]="filters.domains.label" [(model)]="filters.domains.value"></samMultiSelectDropdown>
@@ -21,7 +20,7 @@
         <ng-container *ngFor="let func of org.FunctionContent; let firstFunction = first">
           <div class="usa-grid-full permissions-table-row">
             <div class="usa-width-one-sixth org-col">{{firstFunction ? org.orgKey : ''}}&nbsp;</div>
-            <div class="usa-width-one-third org-level-col">{{firstFunction ? orgLevel(org.id) : ''}}&nbsp;</div>
+            <div class="usa-width-one-third org-level-col">{{firstFunction ? orgLevel(org.orgKey) : ''}}&nbsp;</div>
             <div class="usa-width-one-sixth object-col">{{func.function}}</div>
             <div class="usa-width-one-third permissions-col">
               <span *ngFor="let perm of func.permission">{{perm}}&nbsp;</span>
@@ -32,30 +31,3 @@
     </div>
   </div>
 </ng-container>
-
-<!--<ul *ngIf="userAccessModel">-->
-  <!--There is user-->
-  <!--<li *ngFor="let role of userAccessModel.raw().roleMapContent">-->
-    <!--Role id: {{role.role}}-->
-    <!--<ul>-->
-      <!--<li *ngFor="let domain of role.roleData | groupByDomain">-->
-        <!--Domain id: {{domain.id}}-->
-        <!--<ul>-->
-          <!--<li *ngFor="let org of domain.organizations">-->
-            <!--Org id: {{org.orgKey}}-->
-            <!--<ul>-->
-              <!--<li *ngFor="let func of org.FunctionContent">-->
-                <!--Function Id: {{func.function}}-->
-                <!--<ul>-->
-                  <!--<li *ngFor="let perm of func.permission">-->
-                    <!--Permission Id: {{perm}}-->
-                  <!--</li>-->
-                <!--</ul>-->
-              <!--</li>-->
-            <!--</ul>-->
-          <!--</li>-->
-        <!--</ul>-->
-      <!--</li>-->
-    <!--</ul>-->
-  <!--</li>-->
-<!--</ul>-->
