--- a/src/app/users/public/public.component.html
+++ b/src/app/users/public/public.component.html
@@ -1,6 +1,6 @@
 <div class="usa-grid-full usa-authentication">
   <aside class="usa-width-one-fourth">
-    <h1>User name</h1>
+    <h1>{{userName}}</h1>
     <ul class="usa-sidenav-list">
       <li>
         <a [routerLink]="['profile']" [routerLinkActive]="['usa-current']">Profile</a>
