--- a/src/app/app-components/search-layout/search-layout.template.html
+++ b/src/app/app-components/search-layout/search-layout.template.html
@@ -1,4 +1,4 @@
-<div class="usa-grid search-template">
+<div class="usa-grid search-layout">
 	<aside class="usa-width-one-fourth">
 		<ng-content select="[search-sidebar]"></ng-content>
     &nbsp;
